--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "dc-cli",
-  "version": "0.1.0",
+  "version": "0.1.15",
   "description": "Command line interface for DC protocol",
   "author": "Dao Casino",
   "preferGlobal": true,
   "license": "ISC",
-  "homepage": "https://github.com/DaoCasino",
+  "homepage": "developers.dao.casino",
   "repository": {
     "type": "git",
-    "url": "https://github.com/DaoCasino/dc-cli"
+    "url": "https://github.com/DaoCasino/SDK"
   },
   "bugs": {
-    "url": "https://github.com/DaoCasino/dc-cli/issues",
+    "url": "https://github.com/DaoCasino/SDK/issues",
     "email": "ilya.dev@dao.casino"
   },
   "engines": {
@@ -24,18 +24,36 @@
     "dc",
     "cli",
     "dclib",
+    "dc-cli",
     "dcdapp",
     "dao-casino"
   ],
+  "husky": {
+    "hooks": {
+      "pre-push": "npm run lint"
+    }
+  },
   "scripts": {
-    "preinstall": "npm i -g truffle",
+    "preinstall": "sh ./check_versions.sh",
+    "publish:npm": "npm publish --access=public",
+    "lint": "eslint ./lib ./bin",
     "test": "echo 'test'"
   },
   "dependencies": {
     "chalk": "^2.4.1",
     "commander": "^2.16.0",
     "inquirer": "^6.0.0",
-    "truffle": "^4.1.13"
+    "ora": "^3.0.0",
+    "request": "^2.87.0",
+    "request-promise": "^4.2.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "eslint": "^4.16.0",
+    "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "husky": "^1.0.0-rc.13"
+  }
 }
