--- a/package.json
+++ b/package.json
@@ -33,12 +33,23 @@
     }
   },
   "scripts": {
-    "preinstall": "sh ./check_versions.sh",
     "publish:npm": "npm publish --access=public",
     "lint": "eslint ./lib ./bin",
-    "test": "echo 'test'"
+    "test": "echo 'test'",
+    
+    "start:bankroller_core:local": "bankroller-core start ACCOUNT_PRIVATE_KEY -l",
+    "start:bankroller_core:ropsten": "bankroller-core start ACCOUNT_PRIVATE_KEY -r",
+    "start:bankroller_core:rinkeby": "bankroller-core start ACCOUNT_PRIVATE_KEY -n", 
+    
+    "start:dc_protocol:testrpc": "dc-protocol start",
+    "migrate:local": "dc-protocol migrate --network local",
+    "migrate:ropsten": "dc-protocol migrate --network ropsten",
+    "migrate:rinkeby": "dc-protocol migrate --network rinkeby",
+
+    "logs:pm2": "pm2 monit"
   },
   "dependencies": {
+    "bankroller-core": "^0.1.1",
     "chalk": "^2.4.1",
     "commander": "^2.16.0",
     "download": "^7.1.0",
@@ -48,6 +59,8 @@
     "node-machine-id": "^1.1.10",
     "pm2": "^3.0.4",
     "shelljs": "^0.8.2",
+    "truffle": "^5.0.0-beta.0",
+    "truffle-hdwallet-provider": "^1.0.0-web3one.0",
     "update-check": "^1.5.2"
   },
   "devDependencies": {
