--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,14 @@
 version: "0.1"
 
 services:
-  # bankroller_core:
-  #   container_name: bankroller_core
-  #   labels:
-  #     - "Bankroller instance"
-  #   image: altvnv/bankroller-core:development-latest
-  #   environment:
-  #     - ACCOUNT_PRIVATE_KEY=${ACCOUNT_PRIVATE_KEY}
+
+  bankroller_core:
+    container_name: bankroller_core
+    labels:
+      - "Bankroller instance"
+    image: altvnv/bankroller-core:development-latest
+    environment:
+      - ACCOUNT_PRIVATE_KEY=${ACCOUNT_PRIVATE_KEY}
 
   dc_protocol:
     container_name: dc_protocol
@@ -16,3 +17,5 @@ services:
     image: altvnv/dc-protocol:development-latest
     ports:
       - 8545:8545
+    volumes:
+     - ${CONTRACTS_PATH}:/deploy_protocol/contracts
