--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "download": "^7.1.0",
     "inquirer": "^6.0.0",
     "ncp": "^2.0.0",
+    "dc-messaging": "^0.1.1",
     "node-machine-id": "^1.1.10",
     "pm2": "^3.0.4",
     "truffle": "^5.0.0-beta.0",
