--- a/package.json
+++ b/package.json
@@ -53,14 +53,14 @@
     "logs:docker:bankroller": ""
   },
   "dependencies": {
-    "bankroller-core": "^0.1.1",
+    "bankroller-core": "*",
     "chalk": "^2.4.1",
     "commander": "^2.16.0",
-    "dc-protocol": "^0.1.4",
+    "dc-protocol": "*",
     "download": "^7.1.0",
     "inquirer": "^6.0.0",
     "ncp": "^2.0.0",
-    "dc-messaging": "^0.1.1",
+    "dc-messaging": "*",
     "node-machine-id": "^1.1.10",
     "pm2": "^3.0.4",
     "truffle": "^5.0.0-beta.0",
