--- a/package.json
+++ b/package.json
@@ -63,11 +63,11 @@
     "chalk": "^2.4.1",
     "commander": "^2.16.0",
     "dc-protocol": "^0.1.10",
-    "debug": "^4.1.0",
     "download": "^7.1.0",
     "inquirer": "^6.0.0",
     "ncp": "^2.0.0",
     "dc-messaging": "^0.1.7",
+    "dc-logging": "^0.1.7",
     "node-machine-id": "^1.1.10",
     "pm2": "^3.0.4",
     "truffle": "^5.0.0-beta.0",
