--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
     "publish:npm": "npm run check_update; npm publish --access=public",
     "lint": "eslint ./lib ./bin",
     "test": "echo 'test'",
-    "start:bankroller_core:local": "cross-env-shell bankroller-node start 0xaa3680d5d48a8283413f7a108367c7299ca73f553735860a87b08f39395618b7 -l",
-    "start:bankroller_core:ropsten": "cross-env-shell bankroller-node start $ACCOUNT_PRIVATE_KEY -r",
-    "start:bankroller_core:rinkeby": "cross-env-shell bankroller-node start $ACCOUNT_PRIVATE_KEY -n",
+    "start:bankroller_core:local": "node node_modules/bankroller-node/bin/deamon start 0xaa3680d5d48a8283413f7a108367c7299ca73f553735860a87b08f39395618b7 -l",
+    "start:bankroller_core:ropsten": "cross-env-shell node node_modules/bankroller-node/bin/deamon start $ACCOUNT_PRIVATE_KEY -r",
+    "start:bankroller_core:rinkeby": "cross-env-shell node node_modules/bankroller-node/bin/deamon start $ACCOUNT_PRIVATE_KEY -n",
     "start:dc_protocol:testrpc": "dc-protocol start",
     "migrate:local": "dc-protocol migrate --network local",
     "migrate:ropsten": "dc-protocol migrate --network ropsten",
