fix: add hardcode account to local sdk

--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "lint": "eslint ./lib ./bin",
     "test": "echo 'test'",
     "start:bankroller_core:local": "node node_modules/bankroller-node/bin/deamon start 0xaa3680d5d48a8283413f7a108367c7299ca73f553735860a87b08f39395618b7 -l",
-    "start:bankroller_core:ropsten": "cross-env-shell node node_modules/bankroller-node/bin/deamon start $ACCOUNT_PRIVATE_KEY -r",
-    "start:bankroller_core:rinkeby": "cross-env-shell node node_modules/bankroller-node/bin/deamon start $ACCOUNT_PRIVATE_KEY -n",
+    "start:bankroller_core:ropsten": "node node_modules/bankroller-node/bin/deamon start $ACCOUNT_PRIVATE_KEY -r",
+    "start:bankroller_core:rinkeby": "node node_modules/bankroller-node/bin/deamon start $ACCOUNT_PRIVATE_KEY -n",
     "start:dc_protocol:testrpc": "dc-protocol start",
     "migrate:local": "dc-protocol migrate --network local",
     "migrate:ropsten": "dc-protocol migrate --network ropsten",
