--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,13 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "composite": true,
+    "resolveJsonModule": true,
     "outDir": "lib",
     "rootDir": "src",
     "types" : ["node"]
   },
   
-  "include": ["./src/**/*"],
+  "include": ["./src/**/*", "./src/config/*.json"],
   "exclude": [
     "node_modules/**/*",
     "src/__test__/**/*",
