feat(dc-cli): refactor cli
Create ProcessManager instance for managment process and threw in other instance
Add listen exit
in pm2 service and handle error
fix async start pm2 service
Add command testrpcup for up ganache
testrpc only with needed options
add chai mocha and create first test

BREAKING CHANGE:
add testrpcup command

--- a/package.json
+++ b/package.json
@@ -41,23 +41,16 @@
     "build": "npm-run-all typescript",
     "clean": "rimraf lib",
     "typescript": "tsc --build",
-    "test": "echo 'test'",
-    "start:bankroller_core:local": "node node_modules/bankroller-node/bin/deamon start 0xaa3680d5d48a8283413f7a108367c7299ca73f553735860a87b08f39395618b7 -l",
-    "start:bankroller_core:ropsten": "cross-env-shell node node_modules/bankroller-node/bin/deamon start $ACCOUNT_PRIVATE_KEY -r",
-    "start:bankroller_core:rinkeby": "cross-env-shell node node_modules/bankroller-node/bin/deamon start $ACCOUNT_PRIVATE_KEY -n",
-    "start:dc_protocol:testrpc": "d-protocol start",
-    "migrate:local": "dc-protocol migrate --network local",
-    "migrate:ropsten": "dc-protocol migrate --network ropsten",
-    "migrate:rinkeby": "dc-protocol migrate --network rinkeby",
-    "logs:pm2:testrpc": "pm2 logs dc_protocol --lines=100",
-    "logs:pm2:bankroller": "pm2 logs bankroller_core --lines=100",
+    "test": "mocha --timeout 99999999 -r ts-node/register src/__tests__/*.test.ts",
+    "logs:pm2:testrpc": "pm2 logs dc-protocol --lines=100",
+    "logs:pm2:bankroller": "pm2 logs bankroller-node --lines=100",
     "logs:docker:testrpc": "",
     "logs:docker:bankroller": ""
   },
   "dependencies": {
     "bankroller-node": "^0.1.45",
     "chalk": "^2.4.1",
-    "commander": "^2.16.0",
+    "commander": "^2.19.0",
     "dc-logging": "^0.1.45",
     "dc-messaging": "^0.1.45",
     "dc-protocol": "^0.1.45",
@@ -69,7 +62,11 @@
     "update-check": "^1.5.2"
   },
   "devDependencies": {
+    "@types/mocha": "^5.2.5",
+    "ts-node": "^7.0.1",
     "cross-env": "^5.2.0",
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
     "eslint": "^4.16.0",
     "eslint-config-standard": "^11.0.0-beta.0",
     "eslint-plugin-import": "^2.13.0",
