--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "resolveJsonModule": true,
     "outDir": "lib",
     "rootDir": "src",
-    "types" : ["node"]
+    "types" : ["node", "mocha"]
   },
   
   "include": ["./src/**/*", "./src/config/*.json"],
