--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "build": "npm-run-all typescript",
     "clean": "rimraf lib",
     "typescript": "tsc --build",
-    "test": "mocha --timeout 99999999 -r ts-node/register src/__tests__/*.test.ts",
+    "mocha:run": "mocha --timeout 99999999 -r ts-node/register src/__tests__/*.test.ts",
+    "test": "sh scripts/test-start.sh",
     "logs:pm2:testrpc": "pm2 logs dc-protocol --lines=100",
     "logs:pm2:bankroller": "pm2 logs bankroller-node --lines=100",
     "logs:docker:testrpc": "",
@@ -73,6 +74,7 @@
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
+    "fs-extra": "^7.0.1",
     "husky": "^1.0.0-rc.13",
     "npm-check-updates": "^2.14.2"
   },
