Revert "fix: remove @daocasino from package.json"
This reverts commit 111ea0d1897dd308fb64548323dd701a0a943bd6.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dc-cli",
+  "name": "@daocasino/dc-cli",
   "version": "0.2.0",
   "description": "Command line interface for DC protocol",
   "author": "Dao Casino",
@@ -51,11 +51,11 @@
     "logs:docker:bankroller": ""
   },
   "dependencies": {
-    "bankroller-node": "^0.2.0",
+    "@daocasino/bankroller-node": "^0.2.0",
     "chalk": "^2.4.1",
     "commander": "^2.16.0",
-    "dc-messaging": "^0.2.0",
-    "dc-protocol": "^0.2.0",
+    "@daocasino/dc-messaging": "^0.2.0",
+    "@daocasino/dc-protocol": "^0.2.0",
     "download": "^7.1.0",
     "inquirer": "^6.0.0",
     "ncp": "^2.0.0",
