--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@daocasino/dc-cli",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "description": "Command line interface for DC protocol",
   "author": "Dao Casino",
   "private": true,
@@ -49,9 +49,9 @@
     "logs:docker:bankroller": ""
   },
   "dependencies": {
-    "@daocasino/bankroller-node": "^0.2.3",
-    "@daocasino/dc-messaging": "^0.2.3",
-    "@daocasino/dc-protocol": "^0.2.3",
+    "@daocasino/bankroller-node": "^0.2.4",
+    "@daocasino/dc-messaging": "^0.2.4",
+    "@daocasino/dc-protocol": "^0.2.4",
     "chalk": "^2.4.1",
     "commander": "^2.16.0",
     "download": "^7.1.0",
@@ -63,10 +63,8 @@
   },
   "devDependencies": {
     "@types/mocha": "^5.2.5",
-    "ts-node": "^7.0.1",
-    "cross-env": "^5.2.0",
     "chai": "^4.2.0",
-    "mocha": "^5.2.0",
+    "cross-env": "^5.2.0",
     "eslint": "^4.16.0",
     "eslint-config-standard": "^11.0.0-beta.0",
     "eslint-plugin-import": "^2.13.0",
@@ -75,7 +73,9 @@
     "eslint-plugin-standard": "^3.0.1",
     "fs-extra": "^7.0.1",
     "husky": "^1.0.0-rc.13",
-    "npm-check-updates": "^2.14.2"
+    "mocha": "^5.2.0",
+    "npm-check-updates": "^2.14.2",
+    "ts-node": "^7.0.1"
   },
   "gitHead": "33f46704e19499a4dafe61e7b11697c5adcf3b71"
 }
