--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@daocasino/dc-cli",
-  "version": "0.2.8",
+  "version": "0.2.7",
   "description": "Command line interface for DC protocol",
   "author": "Dao Casino",
   "preferGlobal": true,
@@ -15,8 +15,9 @@
     "email": "ilya.dev@dao.casino"
   },
   "engines": {
-    "node": ">=6.0.0"
+    "node": ">=10.0.0"
   },
+  "main": "./lib/index.js",
   "bin": {
     "dc-cli": "bin/CLI"
   },
@@ -27,14 +28,8 @@
     "dcdapp",
     "dao-casino"
   ],
-  "husky": {
-    "hooks": {
-      "pre-push": "npm run lint"
-    }
-  },
   "scripts": {
     "check_update": "ncu bankroller-core dc-protocol dc-messaging -a",
-    "publish:npm": "npm run check_update; npm publish --access=public",
     "lint": "eslint ./lib ./bin",
     "build:ts": "npm-run-all typescript",
     "build": "npm-run-all typescript",
@@ -48,9 +43,9 @@
     "logs:docker:bankroller": ""
   },
   "dependencies": {
-    "@daocasino/bankroller-node": "^0.2.8",
-    "@daocasino/dc-messaging": "^0.2.4",
-    "@daocasino/dc-protocol": "^0.2.4",
+    "@daocasino/bankroller-node": "^0.2.7",
+    "@daocasino/dc-messaging": "^0.2.7",
+    "@daocasino/dc-protocol": "^0.2.7",
     "chalk": "^2.4.1",
     "commander": "^2.16.0",
     "download": "^7.1.0",
@@ -71,7 +66,6 @@
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
     "fs-extra": "^7.0.1",
-    "husky": "^1.0.0-rc.13",
     "mocha": "^5.2.0",
     "npm-check-updates": "^2.14.2",
     "ts-node": "^7.0.1"
