--- a/package.json
+++ b/package.json
@@ -43,11 +43,12 @@
     "logs:docker:bankroller": ""
   },
   "dependencies": {
-    "@daocasino/bankroller-node": "^0.2.7",
-    "@daocasino/dc-messaging": "^0.2.7",
-    "@daocasino/dc-protocol": "^0.2.7",
+    "@daocasino/bankroller-node": "^0.2.8",
+    "@daocasino/dc-messaging": "^0.2.8",
+    "@daocasino/dc-protocol": "^0.2.8",
     "chalk": "^2.4.1",
     "commander": "^2.16.0",
+    "dirty-chai": "2.0.1",
     "download": "^7.1.0",
     "inquirer": "^6.0.0",
     "ncp": "^2.0.0",
